<resources>
    <string name="app_name" translatable="false">Walhalla</string>
    <string name="app_description">Eine App um den K.St.V. Walhalla im KV zu Würzburg zu verwalten.</string>
    <string name="twitter_consumer_key" translatable="false">hzSShb7hpzLdTRxvehte6lr4H</string>
    <string name="twitter_consumer_secret" translatable="false">ZxIHSvIEK5ylwFUQMk21WZ8SgjtFW2mL7wmGfPwudw77uzf1Nu</string>
    <string name="facebook_app_id" translatable="false">3078474742426626</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3078474742426626</string>
    <string name="adUnitId" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="maps_api_key" translatable="false">AIzaSyARUfC6W1_yUAnmDzjdwL5R4QdjH7c2P_o</string>
    <string name="diashow_left">Vorheriges Bild</string>
    <string name="diashow_right">Nächstes Bild</string>
    <string name="diashow_icon" translatable="false">Icon</string>
    <string name="welcome">Wilkommen</string>
    <string name="image_description">Bildbeschreibung</string>
    <string name="change_semester">Semester wechseln</string>
    <string name="navigation_drawer_open" translatable="false">open left side nav</string>
    <string name="navigation_drawer_close" translatable="false">close left side nav</string>
    <string name="month_jan">Januar</string>
    <string name="month_feb">Februar</string>
    <string name="month_mar">März</string>
    <string name="month_apr">April</string>
    <string name="month_may">Mai</string>
    <string name="month_jun">Juni</string>
    <string name="month_jul">Juli</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">Oktober</string>
    <string name="month_nov">November</string>
    <string name="month_dec">Dezember</string>
    <string name="menu_home">Start</string>
    <string name="menu_about_us">Über uns</string>
    <string name="menu_rooms">Zimmer</string>
    <string name="menu_program">Semesterprogramm</string>
    <string name="menu_messages">Mitteilungen</string>
    <string name="menu_chargen">Aktivenvorstand</string>
    <string name="menu_chargen_phil">Altherrenvorstand</string>
    <string name="menu_user_editing">Nutzerverwalltung</string>
    <string name="menu_logout">Ausloggen</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_drinks">Getränke</string>
    <string name="menu_balance">Kassenstand</string>
    <string name="menu_intern">Interna</string>
    <string name="menu_transcript">Protokolle</string>
    <string name="menu_kartei">Kartei</string>
    <string name="menu_board_only">Nur für Chargen</string>
    <string name="menu_new_person">Neue Person erstellen</string>
    <string name="menu_new_semester">Neues Semester erstellen</string>
    <string name="menu_login">Einloggen / Registrieren</string>
    <string name="menu_more">Mehr Informationen</string>
    <string name="menu_more_history">Vereinsgeschichte</string>
    <string name="menu_more_frat_wue">Verbindungen in Würzburg</string>
    <string name="menu_more_frat_organisation">Verbindungen in Deutschland</string>
    <string name="menu_other">Sonstiges</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_donate">Spenden</string>
    <string name="exit_app_via_back">Erneutes tippen beendet die App</string>
    <string name="menu_greeting">Begrüßung</string>
    <string name="error">Fehler</string>
    <string name="error_dev">Noch in Entwicklung.</string>
    <string name="error_semester_not_exist">Etwas ist schief gelaufen. Das gewählt Semester existiert nicht.</string>
    <string name="frat_name" translatable="false">K.St.V. Walhallaim KV zu Würzbug</string>
    <string name="frat_address" translatable="false">Mergentheimer Straße 32</string>
    <string name="frat_city" translatable="false">97082 Würzburg</string>
    <string name="edit">Bearbeiten</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="edit_shure">Möchtest du wirklich diese Seite bearbeiten?</string>
    <string name="aborted">Abgebrochen</string>
    <string name="save">Speichern</string>
    <string name="abort">Abbrechen</string>
    <string name="title" translatable="false">Titel</string>
    <string name="text" translatable="false">Text</string>
    <string name="subtitle_1">Untertitel 1</string>
    <string name="subtitle_2">Untertitel 2</string>
    <string name="button">Knopf</string>
    <string name="images">Bilder</string>
    <string name="table">Tabelle</string>
    <string name="moveup" translatable="false">moveUp</string>
    <string name="movedown" translatable="false">move down</string>
    <string name="add">Hinzufügen</string>
    <string name="add_paragraph">Add paragraph</string>
    <string name="remove_paragraph">Remove Paragraph</string>
    <string name="add_text">Text hinzufügen</string>
    <string name="add_field_inside_paragraph">Ein Feld hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="send">Senden</string>
    <string name="select_image">Ein Bild auswählen</string>
    <string name="image_camera">Mit Camera aufnehmen</string>
    <string name="image_gallery">Aus Gallerie auswählen</string>
    <string name="select">Auswählen</string>
    <string name="clock">Uhr</string>
    <string name="program_later">anschl.</string>
    <string name="details_dialog_title">Details bearbeiten</string>
    <string name="ct" translatable="false">cum tempore</string>
    <string name="whole_day">ganztägig</string>
    <string name="ws_long" translatable="false">Wintersemester</string>
    <string name="ss_long" translatable="false">Sommersemester</string>
    <string name="dialog_semester_change">Semester wechseln</string>
    <string name="sign_in_choose">oder wähle</string>
    <string name="city">Stadt</string>
    <string name="zip">PLZ</string>
    <string name="street">Straße</string>
    <string name="number">Nummer</string>
    <string name="full_name" translatable="false">Name</string>
    <string name="address">Adresse</string>
    <string name="dob">Geburtstag</string>
    <string name="pob">Herkunft</string>
    <string name="mobile">Handynummer</string>
    <string name="major">Studium oder Jobtitel</string>
    <string name="joined">Beitrittssemester</string>
    <string name="mail">E-Mail</string>
    <string name="rank">Rang</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="saved">Gespeichert</string>
    <string name="error_pob">Für die Chragenseite ist ein Herkunftsort notwendig.</string>
    <string name="error_mobile">Bitte gib eine gültige Handynummer ein</string>
    <string name="dialog_semester_select">Semester wählen</string>
    <string name="error_address">Bitte gib eine vollständige Adresse ein</string>
    <string name="error_major">Bitte gib einen Wert ein</string>
    <string name="later">Später</string>
    <string name="balance_title">Dein aktueller Kassenstand beträgt:</string>
    <string name="balance_description">Dieser Beträg enthält die Bierabrechnungen, vom Convent verhängten Strafen und den Semesterbeitrag. Er aktuallierst sich in echtzeit, sollte dieser vom Kassier verändert werden.</string>
    <string name="drink_date">Datum</string>
    <string name="drink_amount">Anzahl</string>
    <string name="drink_value">Preis</string>
    <string name="drink_name" translatable="false">Name</string>
    <string name="menu_account">Kasse</string>
    <string name="menu_send_reminder">Zahlungserinnerung</string>
    <string name="menu_drink_invoice">Abrechnung</string>
    <string name="menu_drink_payment">Einzahlung</string>
    <string name="menu_drink_fine">Strafe</string>
    <string name="menu_more_wuerzburg_frat">Würzburgs Verbindungen</string>
    <string name="menu_more_germany_frat">Studentische Verbände</string>
    <string name="close">Schließen</string>
    <string name="dialog_charge_choose">Wähle eine Charge</string>
    <string name="select_person">Person suchen</string>
    <string name="from">aus</string>
    <string name="upload_complete">Upload erfolgreich</string>
    <string name="major_short">stud.</string>
    <string name="existing">Existierendes</string>
    <string name="from_device">Gerät</string>
    <string name="choose">Wähle von</string>
    <string name="from_online">Online</string>
    <string name="menu_all_profiles">Alle Nutzer</string>
    <string name="resume">Weiter</string>
    <string name="profile_image">Profilbild</string>
    <string name="password_strength_weak">weak</string>
    <string name="password_strength_medium">medium</string>
    <string name="password_strength_strong">strong</string>
    <string name="password_strength_very_strong">very strong</string>
    <string name="go_back">Zurück</string>
    <string name="password_description">\nPasswort-Bestimmungen:\n- mindestens 8 Zeichen lang\n- mindestens einen Kleinbuchstaben\n- mindestens einen Großbuchstaben\n- mindestens eine Zahl</string>
    <string name="set_password">Passwort setzen</string>
    <string name="edit_password">Passwort ändern</string>
    <string name="confirm_password">Passwort erneut eingeben</string>
    <string name="choose_time">Uhrzeit</string>
    <string name="event_duration">Dauer</string>
    <string name="event_begin">Startzeit</string>
    <string name="event_date">Startdatum</string>
    <string name="event_description">Beschreibung</string>
    <string name="event_visibleTo">Sichtbar für</string>
    <string name="event_isMeeting">Konvent</string>
    <string name="event_add">Veranstaltung erstellen</string>
    <string name="event_collar">Kragen</string>
    <string name="ok" translatable="false">OK</string>
    <string name="event_duration_set">Setze die Dauer der Veranstaltung</string>
    <string name="event_time">Startzeit</string>
    <string name="sign_in_no_internet">App has no internet connection. Sign in and register only with internet connection possible</string>
    <string name="account_disabled">Account disabled</string>
    <string name="account_not_found">No account with this email address found</string>
    <string name="account_send_verification">Email address not yet verified. Sending a new verification email now</string>
    <string name="account_sign_in">enter password to sign in</string>
    <string name="account_no_password">Set a new password</string>
    <string name="account_create">Create new Account</string>
    <string name="sign_in">Passwort eingeben</string>
    <string name="sign_in_failed">Sign in failed!</string>
    <string name="invalid_address">Dies ist keine gültige Adresse</string>
    <string name="sign_in_canceled">Sign in canceled!</string>
    <string name="password_wrong">Passwort falsch</string>
    <string name="chore_bar_b">Bar aufbauen</string>
    <string name="msg_token_fmt">FCM-Token generiert</string>
    <string name="previous">Neuer</string>
    <string name="older">Älter</string>
    <string name="copied_to_clipboard">In zwischenablage gespeichert</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="numbers_one">One</string>
    <string name="numbers_two">Two</string>
    <string name="numbers_three">Three</string>
    <string name="numbers_four">Four</string>
    <string name="numbers_five">Five</string>
    <string name="numbers_six">Six</string>
    <string name="numbers_seven">Seven</string>
    <string name="numbers_eight">Eight</string>
    <string name="numbers_nine">Nine</string>
    <string name="numbers_dot">Dott</string>
    <string name="numbers_zero">Zero</string>
    <string name="numbers_double_zero">Double Zero</string>
</resources>