<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022.
  ~
  ~ Licensed under the Apace License, Version 2.0 (the "Licence"); you may not use this file
  ~ except in compliance with the License. You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~  License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~  either express or implied. See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.widget.TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/oneButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_one"
            android:src="@drawable/dialpad_1" />

        <ImageButton
            android:id="@+id/twoButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_two"
            android:src="@drawable/dialpad_2" />

        <ImageButton
            android:id="@+id/threeButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_three"
            android:src="@drawable/dialpad_3" />
    </android.widget.TableRow>

    <android.widget.TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/fourButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_four"
            android:src="@drawable/dialpad_4" />

        <ImageButton
            android:id="@+id/fiveButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_five"
            android:src="@drawable/dialpad_5" />

        <ImageButton
            android:id="@+id/sixButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_six"
            android:src="@drawable/dialpad_6" />
    </android.widget.TableRow>

    <android.widget.TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/sevenButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_seven"
            android:src="@drawable/dialpad_7" />

        <ImageButton
            android:id="@+id/eightButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_eight"
            android:src="@drawable/dialpad_8" />

        <ImageButton
            android:id="@+id/nineButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_nine"
            android:src="@drawable/dialpad_9" />
    </android.widget.TableRow>

    <android.widget.TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/dotButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_dot"
            android:src="@drawable/dialpad_dot" />

        <ImageButton
            android:id="@+id/zeroButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_zero"
            android:src="@drawable/dialpad_0" />

        <ImageButton
            android:id="@+id/doubleZeroButton"
            style="@style/dialpadStyle"
            android:contentDescription="@string/numbers_double_zero"
            android:src="@drawable/dialpad_double_zero" />
    </android.widget.TableRow>

</android.widget.LinearLayout>
