<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Custom.Text">

    <ImageButton
        android:id="@+id/move_up"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/background"
        android:contentDescription="@string/moveup"
        android:src="@drawable/ic_arrow_up" />

    <ImageButton
        android:id="@+id/move_down"
        android:visibility="gone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/background"
        android:contentDescription="@string/movedown"
        android:src="@drawable/ic_arrow_down" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginEnd="40dp"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="10"
        tools:ignore="Autofill,LabelFor" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:background="@color/background"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete" />
</RelativeLayout>